Fix compile warnings
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>